c4prj2_input/grade.txt
Grading at Fri Jul 31 08:15:21 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘read_input’:
input.c:31:69: error: expected ‘)’ before ‘;’ token
        add_future_card(fc,*(++line_ind)-48,add_empty_card(answer[i]););
                                                                     ^
input.c:34:58: error: operation on ‘line_ind’ may be undefined [-Werror=sequence-point]
      add_card_to(answer[i],card_from_letters(*line_ind,*(++line_ind)));
                                                          ^
input.c:40:9: error: ‘EXIT_FIALURE’ undeclared (first use in this function)
    exit(EXIT_FIALURE);
         ^
input.c:40:9: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
